--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "socket.io": "^1.3.6"
   },
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
