--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "Blorbit",
-    "version": "1.0.0",
-    "description": "Orbit game",
-    "main": "index.js",
-    "dependencies": {
-        "phaser": "^2.4.3",
-        "express": "^4.13.3",
-        "phantom": "^0.7.2",
-        "socket.io": "^1.3.6"
-    },
-    "scripts": {
-        "start": "node index",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-        "orbit",
-        "space",
-        "game"
-    ],
-    "author": "William McMillian",
-    "license": "ISC"
+  "name": "Blorbit",
+  "version": "1.0.0",
+  "description": "Orbit game",
+  "main": "index.js",
+  "dependencies": {
+    "express": "^4.13.3",
+    "node-gyp": "^3.0.3",
+    "phantom": "^0.7.2",
+    "phaser": "^2.4.3",
+    "socket.io": "^1.3.6"
+  },
+  "scripts": {
+    "start": "node index",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "orbit",
+    "space",
+    "game"
+  ],
+  "author": "William McMillian",
+  "license": "ISC"
 }
