--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Orbit game",
   "main": "index.js",
   "dependencies": {
+    "browserify": "^11.2.0",
     "express": "^4.13.3",
     "p2": "^0.7.0",
     "socket.io": "^1.3.6"
